# tripPlanner

./: .gitignore  README.md  docker-compose.yml  env_example.txt  pyproject.toml
backend/: main.py  requirements.txt
backend/logic/: agents.py  crew.py  tasks.py
backend/tools/: calculator_tools.py  search_tools.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: ResultArea.jsx  Sidebar.jsx
