[project]
name = "trip-planner"
version = "0.1.0"
description = "AI Travel Concierge for Prague"
authors = [{name = "Rustem Sandibekov"}]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.100.0",
    "langchain-openai",
    "python-dotenv",
    "unstructured",
    "pyowm",
    "tools"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"